<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetUserInfo">


    <TextView
        android:id="@+id/get_user_info_text"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="6dp"
        android:text="@string/get_user_info_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="61dp"
        android:layout_height="51dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:text="→"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/get_user_info_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="114dp"
        android:layout_height="650dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_user_info_text">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:text="@string/smoker" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:text="@string/drink_level" />

        <TextView
            android:id="@+id/textView3"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/dress_preference" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/amb" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:text="@string/transport" />

        <TextView
            android:id="@+id/textView6"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/marital_status" />

        <TextView
            android:id="@+id/textView7"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/hijos" />

        <TextView
            android:id="@+id/textView8"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/birth_year" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/interest" />

        <TextView
            android:id="@+id/textView10"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/personality" />

        <TextView
            android:id="@+id/textView11"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/religion" />

        <TextView
            android:id="@+id/textView12"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/activity" />

        <TextView
            android:id="@+id/textView14"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/textView15"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/budget" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="289dp"
        android:layout_height="650dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <EditText
            android:id="@+id/editText"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/smoker"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/drink_level"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />


        <EditText
            android:id="@+id/editText13"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/dress_preference"
            android:inputType="text"
            app:layout_editor_absoluteY="20dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="118dp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>